add dashboard charts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,4 +132,9 @@
   .sidebar-label {
     @apply text-16 font-semibold text-black max-xl:hidden;
   }
+
+  /* Navlink */
+  .navlink {
+    @apply flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8;
+  }
 }
