Add/Edit work experience

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,3 +138,15 @@
     @apply flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8;
   }
 }
+
+/* Override: For Calender component to hide month, year labels */
+.rdp-vhidden {
+  @apply hidden;
+}
+
+.rdp-dropdown_month > div {
+  @apply hidden;
+}
+.rdp-dropdown_year > div {
+  @apply hidden;
+}
